--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,5 @@ Imports:
     mirt
 Depends: 
     R (>= 2.10)
+URL: https://github.com/chrisandrewsphd/scoreMRDQ
+BugReports: https://github.com/chrisandrewsphd/scoreMRDQ/issues
