--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,6 @@ Depends:
     R (>= 3.5.0)
 URL: https://github.com/chrisandrewsphd/scoreMRDQ
 BugReports: https://github.com/chrisandrewsphd/scoreMRDQ/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
