--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Imports:
     mirt
 Depends: 
     R (>= 3.5.0)
-URL: https://github.com/chrisandrewsphd/scoreMRDQ
+URL: https://github.com/chrisandrewsphd/scoreMRDQ, https://chrisandrewsphd.github.io/scoreMRDQ/
 BugReports: https://github.com/chrisandrewsphd/scoreMRDQ/issues
 Suggests: 
     testthat (>= 3.0.0)
